--- a/test/fixtures/tickets.yml
+++ b/test/fixtures/tickets.yml
@@ -1,3 +1,18 @@
+# == Schema Information
+#
+# Table name: tickets
+#
+#  id             :integer          not null, primary key
+#  customer_name  :string(255)
+#  customer_email :string(255)
+#  department     :string(255)
+#  subject        :string(255)
+#  description    :text
+#  created_at     :datetime         not null
+#  updated_at     :datetime         not null
+#  reference      :string(255)
+#
+
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
 
 one:
